syntax = "proto3";

package user_service;

option go_package = "github.com/obsessed-gopher/micro-service-guide/pkg/pb/user_service";

import "api/user_service/model.proto";
import "api/user_service/enum.proto";

message UserFilter {
  repeated string ids = 1;
  repeated string emails = 2;
  repeated UserStatus statuses = 3;
}

message ListUsersRequest {
  UserFilter filter = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}